tests/pos/simple/fun-09.ts


/*@ bar :: /\ (() => number) => { number | true } 
           /\ (number)       => { number | true }
 */
function bar(f) {
  return (typeof f === "function") ? f() : f;
}

